--- a/package.json
+++ b/package.json
@@ -6,30 +6,33 @@
   "author": "Ben Lodge",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.14.2",
     "simplemde": "^1.11.2"
   },
-  "main": "dist/react-simplemde-editor.js",
+  "main": "lib/index.js",
+  "peerDependencies": {
+    "react": "15.4.2",
+    "react-dom": "15.4.2"
+  },
   "devDependencies": {
-    "babel-core": "^6.3.15",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-webpack": "^1.5.0",
-    "install": "^0.4.1",
-    "raw-loader": "^0.5.1",
-    "react-dom": "^0.14.3",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.12.1"
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-syntax-jsx": "^6.3.13",
+    "babel-plugin-transform-class-properties": "^6.9.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.11.4",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0"
   },
   "scripts": {
-    "dev": "webpack --progress --colors --watch",
-    "build": "webpack --progress --colors",
-    "build-prod": "NODE_ENV=production webpack --progress --colors && gulp",
-    "build-all": "npm run build && npm run build-prod"
+    "build": "./scripts/babel.js"
   }
 }
