--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "simplemde": "^1.11.2"
   },
   "main": "lib/index.js",
-  "peerDependencies": {
-    "react": "15.4.2",
-    "react-dom": "15.4.2"
-  },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
@@ -30,7 +26,9 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "react": "15.4.2",
+    "react-dom": "15.4.2"
   },
   "scripts": {
     "build": "./scripts/babel.js"
